demo/22-client-svc-route.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rhdg-client
  name: rhdg-client
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: rhdg-client
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: rhdg-client
  name: rhdg-client
spec:
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: rhdg-client
